--- a/styles.css
+++ b/styles.css
@@ -89,7 +89,7 @@ nav li a{
 .action{
     display: flex;
     justify-content: space-between;
-    margin: 0 160px 0 140px;
+    margin: 0 160px 0 145px;
     margin-top: 116px;
 }
 
@@ -113,7 +113,119 @@ nav li a{
 }
 
 /* main */
-/* main{
+ /* main{
     max-width: 1140px;
     margin: 0 auto;
-} */
+}  */
+
+/* user section */
+.user{
+    background-color: rgb(78, 71, 255, 10%);
+    margin-top: 116px;
+    padding: 50px 142px;
+    border-radius: 24px;
+
+    margin-top: 137px;
+    margin-left: 151px;
+    margin-right: 150px;
+    margin-bottom: 137px;
+}
+.user-items{
+    display: flex;
+    justify-content: space-around;
+    gap: 158px;
+
+}
+.user-h2{
+    font-weight: bold;
+    font-size: 38px;
+    color: #252432;
+    text-align: center;
+}
+.user-title{
+    font-size: 80px;
+    font-weight: bold;
+    color: #4E47FF;
+    margin-bottom: 0%;
+}
+.user-des{
+    font-weight: 400;
+    font-size: 20px;
+    color: rgb(37, 36, 50, 50%);
+}
+
+/* review section */
+.review{
+    margin: 137px 151px 0 150px;
+}
+
+.review-title{
+    font-weight: bold;
+    font-size: 42px;
+    color: #252432;
+    text-align: center;
+}
+.review-cards{
+    display: flex;
+    gap: 70px;
+}
+.card-footer{
+    display: flex;
+}
+.card-title{
+    font-size: 24px;
+    font-weight: 600;
+    color: #1E1E1E;
+}
+.card-des{
+    font-size: 16px;
+    font-weight: 400;
+    color: #1E1E1E;
+}
+.card-footer ul{
+    list-style: none;
+}
+.footer-img{
+    border-radius: 9999;
+    size: large;
+    shape-outside: circle();
+}
+.card{
+    box-shadow: 0 4px 4px 0 rgb(0, 0, 0, 25%);
+    border-radius: 14px;
+}
+.card-content{
+    
+    padding-top: 24px;
+    padding-left: 24px;
+    padding-right: 226px;
+    padding-bottom: 24px;
+}
+.card-body{
+
+    padding-top: 0;
+    padding-left: 24px;
+    padding-right: 26px;
+    padding-bottom: 24px;
+}
+
+.card-footer{
+    padding-top: 0;
+    padding-left: 24px;
+    padding-right: 24px;
+    padding-bottom: 24px;
+    align-items: center;
+}
+.card-footer img{
+    width: 40px;
+    height: 40px;
+    border-radius: 9999px;
+}
+.li-1{
+    color: #757575;
+    font-size: 16px;
+    font-weight: 600;
+}
+.li-2{
+    color: #B3B3B3;
+}
