--- a/styles.css
+++ b/styles.css
@@ -23,7 +23,7 @@
   
   /* header */
   .header {
-    background-image: url(/assets/Hero-bg.png);
+    background-image: url('./assets/Hero-bg.png');
     background-size: cover;
     background-repeat: no-repeat;
     background-position: center;
